--- a/Framgia/Base.lproj/Main.storyboard
+++ b/Framgia/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Framgia" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" customModule="Framgia" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -105,6 +105,9 @@
                                 <state key="normal" title="Login" backgroundImage="login_button.png">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="login:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HBd-WB-v7y"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" background="textfield_bg.png" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="mhR-QR-ree">
                                 <rect key="frame" x="42" y="275" width="236" height="39"/>
@@ -116,7 +119,7 @@
                                 </constraints>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
                                         <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -148,14 +151,18 @@
                             <constraint firstItem="Pm7-LO-XkN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zD7-Av-koT"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="txtMail" destination="Pm7-LO-XkN" id="hau-Yg-D1J"/>
+                        <outlet property="txtPassword" destination="mhR-QR-ree" id="9oR-nl-I9L"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="462-H3-luz">
             <objects>
-                <viewController id="ZBp-s8-6iz" sceneMemberID="viewController">
+                <viewController id="ZBp-s8-6iz" customClass="HomeViewController" customModule="Framgia" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Fq4-au-EbF"/>
                         <viewControllerLayoutGuide type="bottom" id="hkG-XZ-JfS"/>
@@ -163,13 +170,23 @@
                     <view key="view" contentMode="scaleToFill" id="VA6-2C-bfB">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rgL-xo-FVc">
+                                <rect key="frame" x="113" y="169" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="logout:" destination="ZBp-s8-6iz" eventType="touchUpInside" id="E5F-PH-GU1"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.72063301282051284" green="0.69861115235992488" blue="0.28851693439620524" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="m3F-1F-lbf"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Bx-8t-ayg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1168.125" y="-1916.1971830985915"/>
+            <point key="canvasLocation" x="212" y="-1916"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="OwJ-p3-NM9">
@@ -182,13 +199,13 @@
                     <view key="view" contentMode="scaleToFill" id="B4V-X3-S0h">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.25098040700000002" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="qjD-Ml-sRv"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dmi-6B-B2t" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4815" y="-1916.1971830985915"/>
+            <point key="canvasLocation" x="3896" y="-1916"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="F9X-EQ-1tU">
@@ -207,7 +224,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mbM-F5-DBH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2964.375" y="-1916.1971830985915"/>
+            <point key="canvasLocation" x="2014" y="-1916"/>
         </scene>
         <!--Timeline View Controller-->
         <scene sceneID="y6A-JQ-gyk">
@@ -219,14 +236,14 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="ybO-0w-GtH" kind="relationship" relationship="viewControllers" id="fPi-EG-qTH"/>
-                        <segue destination="b3q-qL-FBp" kind="relationship" relationship="viewControllers" id="4Jv-JO-Ekv"/>
-                        <segue destination="yXb-8P-2Hl" kind="relationship" relationship="viewControllers" id="aZW-vf-aq3"/>
+                        <segue destination="b3q-qL-FBp" kind="relationship" relationship="viewControllers" id="Tc3-dT-kJf"/>
+                        <segue destination="ybO-0w-GtH" kind="relationship" relationship="viewControllers" id="lek-ll-UfH"/>
+                        <segue destination="yXb-8P-2Hl" kind="relationship" relationship="viewControllers" id="VIq-Y3-8vp"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5ag-Ud-etj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="923" y="-1200"/>
+            <point key="canvasLocation" x="2453" y="-560"/>
         </scene>
         <!--Register View Controller-->
         <scene sceneID="ytC-SS-IXb">
@@ -368,6 +385,20 @@
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                 <state key="normal" title="  Add  Photo" backgroundImage="add_photo.png"/>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M31-Y7-5A0">
+                                <rect key="frame" x="0.0" y="20" width="31" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Egn-6Q-4tX"/>
+                                    <constraint firstAttribute="width" constant="31" id="WND-i0-iLm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                                <state key="normal" title="✖️">
+                                    <color key="titleColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="clickCancel:" destination="lkI-R8-EWW" eventType="touchUpInside" id="vxk-JT-XfM"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -376,8 +407,10 @@
                             <constraint firstItem="g3g-j5-a0O" firstAttribute="top" secondItem="JJ9-fW-WXh" secondAttribute="bottom" constant="25" id="6IY-mG-UJe"/>
                             <constraint firstItem="KPu-w1-xdm" firstAttribute="top" secondItem="gKt-TK-AsS" secondAttribute="top" id="6UN-2X-45Q"/>
                             <constraint firstItem="Vpn-MF-DNV" firstAttribute="centerX" secondItem="gKt-TK-AsS" secondAttribute="centerX" id="BT4-Sn-g1i"/>
+                            <constraint firstItem="M31-Y7-5A0" firstAttribute="top" secondItem="gKt-TK-AsS" secondAttribute="top" constant="20" id="CFc-EE-nTT"/>
                             <constraint firstItem="l6k-ff-vFS" firstAttribute="centerX" secondItem="gKt-TK-AsS" secondAttribute="centerX" id="EC2-ze-Oax"/>
                             <constraint firstItem="laN-Kz-cfr" firstAttribute="top" secondItem="KPu-w1-xdm" secondAttribute="bottom" id="KRZ-Cu-BRX"/>
+                            <constraint firstItem="M31-Y7-5A0" firstAttribute="leading" secondItem="gKt-TK-AsS" secondAttribute="leading" id="RSd-TW-d7K"/>
                             <constraint firstItem="0Mo-Xl-Cjs" firstAttribute="top" secondItem="IAK-0g-j80" secondAttribute="bottom" constant="20" id="VEh-Sh-Hyl"/>
                             <constraint firstItem="Vpn-MF-DNV" firstAttribute="top" secondItem="UH0-Z3-rl2" secondAttribute="bottom" constant="22" id="Vlc-bI-4k5"/>
                             <constraint firstItem="UH0-Z3-rl2" firstAttribute="centerX" secondItem="gKt-TK-AsS" secondAttribute="centerX" id="XA1-kx-kJM"/>
@@ -402,7 +435,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="joz-sj-pzG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1005" y="74"/>
+            <point key="canvasLocation" x="952.5" y="34.859154929577464"/>
         </scene>
         <!--Profile-->
         <scene sceneID="ZDT-uA-VUE">
@@ -421,7 +454,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bn8-uX-3sx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="170.625" y="-1916.1971830985915"/>
+            <point key="canvasLocation" x="-572" y="-1916"/>
         </scene>
         <!--Timeline-->
         <scene sceneID="Xz7-hn-70Q">
@@ -440,7 +473,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vRe-fK-ha1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1966.875" y="-1916.1971830985915"/>
+            <point key="canvasLocation" x="1305" y="-1916"/>
         </scene>
         <!--More-->
         <scene sceneID="Ox8-ON-9Ta">
@@ -459,7 +492,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zwK-HK-on6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3817.5" y="-1916.1971830985915"/>
+            <point key="canvasLocation" x="3094" y="-1916"/>
         </scene>
     </scenes>
     <resources>
