--- a/Framgia/Storyboard/Base.lproj/Main.storyboard
+++ b/Framgia/Storyboard/Base.lproj/Main.storyboard
@@ -245,6 +245,60 @@
             </objects>
             <point key="canvasLocation" x="725.625" y="-1184.1549295774648"/>
         </scene>
+        <!--Read More View Controller-->
+        <scene sceneID="OXO-xo-TsJ">
+            <objects>
+                <viewController storyboardIdentifier="ReadMoreViewController" id="Qyb-yt-OOY" customClass="ReadMoreViewController" customModule="Framgia" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="THm-iQ-43k"/>
+                        <viewControllerLayoutGuide type="bottom" id="iL0-OF-t0D"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="vA6-hO-6kM">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7eD-Nn-nvn">
+                                <rect key="frame" x="0.0" y="54" width="320" height="514"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="jea-LV-lgD">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="F0j-97-QGK">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="Qyb-yt-OOY" id="MkD-iW-2tm"/>
+                                    <outlet property="delegate" destination="Qyb-yt-OOY" id="p0i-xM-EFo"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="7eD-Nn-nvn" firstAttribute="top" secondItem="THm-iQ-43k" secondAttribute="bottom" constant="34" id="IGV-3h-CGv"/>
+                            <constraint firstItem="7eD-Nn-nvn" firstAttribute="leading" secondItem="vA6-hO-6kM" secondAttribute="leading" id="JsM-r4-SDB"/>
+                            <constraint firstAttribute="trailing" secondItem="7eD-Nn-nvn" secondAttribute="trailing" id="PdE-Eg-aER"/>
+                            <constraint firstItem="iL0-OF-t0D" firstAttribute="top" secondItem="7eD-Nn-nvn" secondAttribute="bottom" id="xhH-FE-iFB"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="7eD-Nn-nvn" id="BqS-a2-pex"/>
+                    </connections>
+                </viewController>
+                <navigationItem id="ga9-6d-GFu"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="34v-cl-atS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1716" y="-1172"/>
+        </scene>
         <!--Profile View Controller-->
         <scene sceneID="OwJ-p3-NM9">
             <objects>
@@ -286,7 +340,7 @@
                             <constraint firstItem="ce1-0m-17E" firstAttribute="top" secondItem="dkV-yV-pbL" secondAttribute="bottom" constant="40" id="iDn-g4-RCI"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="qjD-Ml-sRv"/>
+                    <navigationItem key="navigationItem" id="mC6-FW-v0d"/>
                     <connections>
                         <outlet property="collectionView" destination="ce1-0m-17E" id="zA9-48-P4l"/>
                     </connections>
